# rainfall-notify

./: .gitignore  .gitlab-ci.yml  CLAUDE.md  Dockerfile  README.md  config.example.yaml  config.schema  install.zsh  pyproject.toml  renovate.json
.github/workflows/: regression.yaml
conf/: alsa-base.conf
src/: app.py  healthz.py
src/rainfall/: monitor.py
tests/: test_basic.py
